--- a/trunk/SkyCastle/html-template/index.template.html
+++ b/trunk/SkyCastle/html-template/index.template.html
@@ -71,6 +71,7 @@ if ( hasProductInstall && !hasRequestedVersion ) {
 		"bgcolor", "${bgcolor}",
 		"name", "${application}",
 		"allowScriptAccess","sameDomain",
+		"allowFullScreen","true",
 		"type", "application/x-shockwave-flash",
 		"pluginspage", "http://www.adobe.com/go/getflashplayer"
 	);
@@ -87,6 +88,7 @@ if ( hasProductInstall && !hasRequestedVersion ) {
 			"bgcolor", "${bgcolor}",
 			"name", "${application}",
 			"allowScriptAccess","sameDomain",
+			"allowFullScreen","true",
 			"type", "application/x-shockwave-flash",
 			"pluginspage", "http://www.adobe.com/go/getflashplayer"
 	);
